--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "file-loader": "^5.0.2",
     "raw-loader": "^4.0.0",
     "vue-template-compiler": "^2.6.10",
     "xml-loader": "^1.2.1"
